# PwC-Challenge-DataEngineer

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.production  .env.production.secure  .env.test  .gitignore  .pre-commit-config.yaml  ADVANCED_API_FEATURES.md  BACKUP_DISASTER_RECOVERY.md  BMAD-GAP-ANALYSIS-REPORT.md  BMAD-SPRINT-ROADMAP.md  BMAD_COMPREHENSIVE_TESTING_STRATEGY.md  BMAD_MONITORING_DEPLOYMENT_GUIDE.md  BMAD_TESTING_IMPLEMENTATION_SUMMARY.md  CICD_DOCUMENTATION.md  COMPLETE_API_DOCUMENTATION.md  COMPREHENSIVE_BMAD_GAP_ANALYSIS_REPORT.md  COMPREHENSIVE_PROJECT_COMPLETION_REPORT.md  COMPREHENSIVE_QA_ANALYSIS_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  COVERAGE_BASELINE_REPORT.md  CRITICAL_TESTING_VALIDATION_REPORT.md  DATABASE_OPTIMIZATION_ANALYSIS.md  DATADOG_COMPREHENSIVE_ALERTING_IMPLEMENTATION.md  DATADOG_LOG_AGGREGATION_IMPLEMENTATION.md  DATADOG_SYNTHETIC_MONITORING_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  ENTERPRISE_API_DEPLOYMENT_GUIDE.md  ENTERPRISE_API_IMPLEMENTATION_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_DOCUMENTATION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_PROJECT_ANALYSIS_AND_RECOMMENDATIONS.md  FINAL_PROJECT_STATUS.md  FIXES_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  (+52 more)
.agents/instructions/: enhanced-claude-instructions.md  project-summary.md
.agents/todos/: api-microservices-agent-todos.txt  cloud-data-platform-agent-todos.txt  data-modeling-sql-agent-todos.txt  documentation-technical-writer-agent-todos.txt  general-purpose-agent-todos.txt  monitoring-obs-agent-todos.txt  testing-qa-agent-todos.txt
.claude/: settings.local.json
.claude/agents/: agent-instructions.md  api-microservices-agent.md  cloud-data-platform-agent.md  data-modeling-sql-agent.md  dev-agent.md  documentation-technical-writer-agent.md  git-operations-agent.md  github-actions-agent.md  monitoring-obs-agent.md  scrum-master-agent.md  testing-qa-agent.md
.claude/stories/: bmad-user-stories.md  enhanced-bmad-stories-technical.md  story-1.1-business-intelligence-dashboard.md  story-1.1-technical-bi-dashboard.md  story-1.2-data-quality-framework.md  story-2.1-technical-zero-trust-security.md  story-2.1-zero-trust-security.md  story-2.2-api-performance-optimization.md  story-3.1-self-service-analytics.md  story-4.1-mobile-analytics-platform.md  story-4.2-ai-llm-conversational-analytics.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/issue_templates/: bug_report.md  feature_request.md
.github/workflows/: advanced-deployment.yml  advanced-testing.yml  agent-team-coordination.yml  bmad-orchestrator.yml  bmad-quality-gates.yml  ci.yml  claude-code.yml  comprehensive-testing.yml  database-migration.yml  dbt-ci.yml  deploy.yml  deployment.yml  docker.yml  docs-sync.yml  documentation-validation.yml  enterprise-ci-cd.yml  integration-tests.yml  main-cicd.yml  markdown-link-check.json  monitoring-alerting.yml  monitoring.yml  quality-gates-performance.yml  security-compliance.yml  specialized-testing.yml  story-4-testing-pipeline.yml
config/: logging.yaml  spark-defaults.conf
data/metrics/: metrics.db
data/warehouse/: retail.db
dbt/: README.md
dbt/macros/: advanced_analytics.sql  data_lineage.sql  data_quality_checks.sql  data_retention.sql  data_vault_modeling.sql  dimensional_modeling.sql  generate_alias_name.sql  performance_optimization.sql
deployment/: DEPLOYMENT_GUIDE.md  Dockerfile  deploy.sh  docker-compose.development.yml  docker-compose.production.yml  validate.sh
deployment/ci-cd/: gitlab-ci.yml
deployment/kubernetes/: api-deployment.yaml  configmaps.yaml  data-mesh-platform.yaml  monitoring-stack.yaml  namespace.yaml  secrets.yaml
deployment/monitoring/: prometheus.yml
deployment/nginx/: nginx.conf
docker/: Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.dagster  Dockerfile.dbt  Dockerfile.etl  Dockerfile.jupyter  Dockerfile.nginx  Dockerfile.production  Dockerfile.production-optimized  Dockerfile.test  init-db-dev.sql  init-db-prod.sql  init-db-test.sql  init-db.sql
docker/alertmanager/: alertmanager.yml
docker/nginx/: nginx.conf
docker/prometheus/: advanced-prometheus.yml  alert-rules.yml  business-metrics-rules.yml  comprehensive-alerting-rules.yml  dev.yml  prod.yml  (+3 more)
docs/: API_DOCUMENTATION.md  ARCHITECTURE_REFACTORING.md  CLOUD_PLATFORM_ARCHITECTURE_REVIEW.md  COMPLETE_API_REFERENCE.md  COMPREHENSIVE_DOCUMENTATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DISTRIBUTED_TRACING.md  DOCUMENTATION_FRAMEWORK.md  ENTERPRISE_ARCHITECTURE.md  ENTERPRISE_DOCUMENTATION_PORTAL.md  ETL_PIPELINE_DOCUMENTATION.md  MIDDLEWARE_OPTIMIZATION_GUIDE.md  ML_PIPELINE_MLOPS_GUIDE.md  ORCHESTRATION.md  README.md  SECRET_MANAGEMENT.md  TECHNICAL_README.md
examples/: configuration_usage_example.py  datadog_enterprise_example.py  error_handling_examples.py  logging_examples.py
infrastructure/: DEPLOYMENT_GUIDE.md  ssl-dns-production-deployment.sh
scripts/: apply_middleware_optimization.py  ci_mutation_testing.py  compare_middleware_performance.py  demo_datadog_metadata_catalog.py  demo_schema_evolution.py  deploy.bat  deploy.sh  deploy_production.sh  deploy_staging.sh  docs-search-indexer.py  final_production_validation.py  generate_api_documentation.py  generate_test_report.py  index_elasticsearch.py  index_typesense.py  init_db.py  migrate_pydantic_v2.py  performance_benchmark.py  prepare_data.py  run_bronze.py  run_bronze_pandas.py  run_bronze_polars.py  run_bronze_spark.py  run_complete_test_suite.py  run_comprehensive_load_tests.py  run_comprehensive_tests.py  run_etl.py  run_etl_spark.py  run_gold.py  run_gold_spark.py  run_mutation_testing.py  run_security_tests.py  run_silver.py  run_silver_pandas.py  run_silver_spark.py  run_targeted_coverage.py  secret_management.py  seed_data.py  standalone_api_docs_generator.py  start_airflow.py  (+6 more)
terraform/: ENTERPRISE_PLATFORM_SUMMARY.md  Makefile  README.md  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_monitoring.py  test_repository.py  test_sales_repository.py  test_silver_transform.py  test_transformations.py
(+894 files in other folders)
